--- a/arrow/Cargo.toml
+++ b/arrow/Cargo.toml
@@ -56,7 +56,7 @@ prettytable-rs = { version = "0.8.0", optional = true }
 simd = ["packed_simd"]
 flight = ["arrow-flight"]
 prettyprint = ["prettytable-rs"]
-default = ["flight", "prettyprint"]
+default = ["prettyprint"]
 
 [dev-dependencies]
 criterion = "0.3"
